Work in progress on Beacon slides

--- a/beacons/beacons.html
+++ b/beacons/beacons.html
@@ -24,7 +24,9 @@
 
 				<section>
 					<h2>The Technology</h2>
-					<p>file:///home/chronos/u-0f4388224df80168f2f5dd85c8dfc3256e0a1f86/Downloads/Bluetooth_low_energy_CSR.pdf.</p>
+					<p>Bluetooth Low Energy (BLE), officially know as "Bluetooth Smart"</p>
+                    <p>A light-weight subset of classic Bluetooth which was introduced as
+                        part of the Bluetooth 4.0 core specification</p>
 				</section>
                 <section>
                     <h2>altBeacon Specification</h2>
