--- a/beacons/beacons.html
+++ b/beacons/beacons.html
@@ -109,6 +109,13 @@ UriBeaconScanner.on('discover', function(uriBeacon) {
                         Your browser does not support the video tag.
                     </video>
                 </section>
+                <section>
+                    <h2>Truth Labs</h2>
+                    <video width="640" height="480" controls>
+                        <source src="images/truthLabs_tracking.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </section>
 
 			</div>
 
