added node info and summary slide

--- a/beacons/beacons.html
+++ b/beacons/beacons.html
@@ -168,7 +168,23 @@ UriBeaconScanner.on('discover', function(uriBeacon) {
                     </p>
                 </section>
                 <section>
-                    <h2>And finally...</h2>
+                    <h2>Software on the Pi</h2>
+                    <ul>
+                    <li>Bluez</li>
+                    <li>node.js</li>
+                    <ul>
+                        <li>onoff.js</li>
+                        <li>uri-beacon-scanner</li>
+                    </ul>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Summary</h2>
+                    <img height=300 src="images/physical_web_log.png"/>
+                    <img height=300 src="images/ibeacon.jpg"/>
+                </section>
+                <section>
+                    <h2>Questions?</h2>
                 </section>
 			</div>
 
