Final polish for CamJam

--- a/beacons/beacons.html
+++ b/beacons/beacons.html
@@ -7,7 +7,7 @@
 		<title>BLE Beacons</title>
 
 		<link rel="stylesheet" href="../../reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="../../reveal.js/css/theme/moon.css" id="theme">
+		<link rel="stylesheet" href="images/moon.css" id="theme">
 	</head>
 
 	<body>
@@ -159,7 +159,7 @@ UriBeaconScanner.startScanning();
                 <section>
                     <h2>Software on the Pi</h2>
                     <ul>
-                        <li>Bluez</li>
+                        <li>bluez</li>
                         <li>node.js</li>
                         <ul>
                             <li>uri-beacon-scanner</li>
@@ -206,6 +206,7 @@ UriBeaconScanner.startScanning();
 
                 <section>
                     <h2>Summary</h2>
+                    <p>uriBeacon has the best support</p>
                 </section>
 			</div>
 
