Revert local theme

--- a/beacons/beacons.html
+++ b/beacons/beacons.html
@@ -7,7 +7,7 @@
 		<title>BLE Beacons</title>
 
 		<link rel="stylesheet" href="../../reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="images/moon.css" id="theme">
+		<link rel="stylesheet" href="../../reveal.js/css/theme/moon.css" id="theme">
 	</head>
 
 	<body>
@@ -114,7 +114,7 @@
                     </small></p>
                 </section>
                 <section>
-                    <h2>uriBeacon appears to offer most</h2>
+                    <h3>uriBeacon appears to offer most</h3>
                     <ul>
                         <li>Open standard</li>
                         <li>Flexible payload</li>
