--- a/beacons/beacons.html
+++ b/beacons/beacons.html
@@ -8,6 +8,15 @@
 
 		<link rel="stylesheet" href="../../reveal.js/css/reveal.css">
 		<link rel="stylesheet" href="../../reveal.js/css/theme/moon.css" id="theme">
+        <script>
+            if( window.location.search.match( /print-pdf/gi ) ) {
+                var link = document.createElement( 'link' );
+                link.rel = 'stylesheet';
+                link.type = 'text/css';
+                link.href = '../../reveal.js/css/print/pdf.css';
+                document.getElementsByTagName( 'head' )[0].appendChild( link );
+            }
+        </script>
 	</head>
 
 	<body>
